# docs/swagger.json
@@ -140,7 +140,7 @@
                 }
             }
         },
-        "/chat/direct/{chatId}/messages/paginated": {
+        "/chat/direct/{chatId}/messages": {
             "get": {
                 "security": [
                     {
@@ -565,6 +565,75 @@
                             "items": {
                                 "$ref": "#/definitions/models.MessageResponse"
                             }
+                        }
+                    },
+                    "401": {
+                        "description": "No autorizado",
+                        "schema": {
+                            "type": "string"
+                        }
+                    },
+                    "404": {
+                        "description": "Sala no encontrada",
+                        "schema": {
+                            "type": "string"
+                        }
+                    },
+                    "500": {
+                        "description": "Error interno del servidor",
+                        "schema": {
+                            "type": "string"
+                        }
+                    }
+                }
+            }
+        },
+        "/chat/rooms/{roomId}/messages/paginated": {
+            "get": {
+                "security": [
+                    {
+                        "BearerAuth": []
+                    }
+                ],
+                "description": "Devuelve los mensajes de una sala específica con soporte para paginación ordernada por fecha de creación descendente",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Chat"
+                ],
+                "summary": "Obtiene mensajes de una sala",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "ID de la sala",
+                        "name": "roomId",
+                        "in": "path",
+                        "required": true
+                    },
+                    {
+                        "type": "integer",
+                        "default": 50,
+                        "description": "Límite de mensajes a obtener",
+                        "name": "limit",
+                        "in": "query"
+                    },
+                    {
+                        "type": "string",
+                        "default": "\"1747441934\"",
+                        "description": "Cursor para paginación (timestamp)",
+                        "name": "cursor",
+                        "in": "query"
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "Mensajes paginados de la sala",
+                        "schema": {
+                            "$ref": "#/definitions/models.PaginatedMessagesResponse"
                         }
                     },
                     "401": {
