# internal/handlers/chat_handler.go
@@ -134,7 +134,7 @@ func (h *ChatHandler) GetUserRooms(w http.ResponseWriter, r *http.Request) {
 //	@Failure		401		{string}	string			"No autorizado"
 //	@Failure		404		{string}	string			"Sala no encontrada"
 //	@Failure		500		{string}	string			"Error interno del servidor"
-//	@Router			/chat/rooms/{roomId}/messages [get]
+//	@Router			/chat/rooms/{roomId}/messages/paginated [get]
 func (h *ChatHandler) GetRoomMessages(w http.ResponseWriter, r *http.Request) {
 	roomID := chi.URLParam(r, "roomId")
 
@@ -247,7 +247,7 @@ func (h *ChatHandler) GetUserDirectChats(w http.ResponseWriter, r *http.Request)
 //	@Failure		401		{string}	string			"No autorizado"
 //	@Failure		404		{string}	string			"Chat no encontrado"
 //	@Failure		500		{string}	string			"Error interno del servidor"
-//	@Router			/chat/direct/{chatId}/messages/paginated [get]
+//	@Router			/chat/direct/{chatId}/messages [get]
 func (h *ChatHandler) GetDirectChatMessages(w http.ResponseWriter, r *http.Request) {
 	chatID := chi.URLParam(r, "chatId")
 
